test/expected/explain_fiiv_v.out
explain void f( int, int, void )
                          ^
27: error: "void" must be only parameter if specified
